//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "google/protobuf/empty.proto";
import "dxos/keys.proto";

package dxos.mesh.teleport.presence;

message PeerState {
  dxos.keys.PublicKey peer_id = 1;
  /// Will be used to build network graph
  repeated dxos.keys.PublicKey connections = 2; 
  /// Peer tracks what had been sent by message id
  dxos.keys.PublicKey message_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  // TODO(mykola): Remove once IdentityKey can be obtained from DeviceKey.
  dxos.keys.PublicKey identity_key = 5;
}

service PresenceService {
  rpc Announce(PeerState) returns (google.protobuf.Empty);
}
